[package]
name = "game"
description = "Generic game engine"
authors = ["Andres"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bmp = "0.5.0"
clap = { version = "4.4.2", features = ["derive"] }
crossterm = { version = "0.27.0", features = ["event-stream"] }
futures = "0.3.28"
ratatui = "0.23.0"
thiserror = "1.0.47"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
